# asami

./: .gitattributes  .gitignore  CNAME  Cargo.toml  README.md  Rocket.toml  _config.yml  asami.session  meeting_notes.md  process.yml  public_api_queries.graphql  public_api_schema.graphql  pwa.md  rust-toolchain.toml  rustfmt.toml
api/: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  Rocket.toml.sample  rustfmt.toml
api/.sqlx/: query-00a0eacd689db82bc761330cbc50a95b0709bc0f8eb9212e214c0d9590053c98.json  query-00e2c771bf4d633c82abc8979c1fd991feeaf60a509f3b42a1a793bd7ef00236.json  query-01903e53ac13daa8e5d34834ef42f842bea3290ceda9190e1d656771319af0ab.json  query-01933378e7c3afa57bd3616360f54106dd51ccac42363b812ef3b9c441bcc62a.json  query-02592ddd296027bb2fc384a9268d0808538bf1730ebd20880fb81d77e00fe00f.json  query-0276e4d8378c841abf2c8b3c424553fb8c6053f738f6f5553375c049c3da9540.json  query-02d00b9903c13176970cb9eb69a2782227204cdff956da24243c1e9f9dab09c7.json  query-03d6449121d5cd10310bba9286ee9baa527faf9f0418079f9d7f19dd5d5eb201.json  query-0417a7cef0986979c758e59cdd29140ff93031035d64658bcd551fc1bbc09904.json  query-0463e9d38a5d9aac1a09b0eb7269e739791564a804ecd368fbb3ceff4bc78a30.json  query-04a0bbfd1dc1514d4cc0cc5baab5f8189333fd12dcaf1d39cb023d3d2825631e.json  query-053b60bfc93e3b9172be526227eb1a216d7a43259a58a1a2155a019fa370129b.json  query-0559245ea84df87051cacb849f3556725bc4d75eb02f67263e3705582d4c4e10.json  query-0568e63300fd2c12a0aa40789e281a120f03628d354435df551390ac71ea6c46.json  query-06f1d2917fc3a32b0c1387f8d474be5a8c9916d4c9e2841af3ff11806772bf0a.json  query-07331c2379fff0dddd727d6e924b327d019c1fd26d49082d03707b34950d3af4.json  query-0736cabfc43a3deb93de65e4eda1558be1d78bff764cfb0c9f0f46049a4f5445.json  query-07c4bcc216a8359255bde98d43857b67176e4a4e034ec5a0d02dceb84619236e.json  query-07e43a532b01de8d42f96248dff83eedef076c513b91b202ac7a22703fb4904f.json  query-0802a39a81ecb793401f42375f24aa59e171193648a453e32b43d474bd6d469b.json  query-08c02405c04b0f1777e7f32ada4d64a1029b3c273c10fc7a5181447608d46d4a.json  query-08c5c823d7f96acd52b8c0c1c2398d9243aa1150db542c32eafde72fe14880b5.json  query-098e991d3bfa532679d7fb36620032f9c310bfa05507b2c942af0fa84ee23afc.json  query-09a027df2b5695b0c48970b7265a1804d66e6d8acb9836469b789acde3df0d24.json  query-09b0876eefbd0925b1519e7e6adac2cf3b29f95425d254a11565fd3aeade9e35.json  query-0a4e67443d8d1dc10ce6136680c2d89c545f661e35847fa85276dc3627a69954.json  query-0c0fd287e9f5c7c5ec8b48c96094f516b4879f7596c252a72a7594a9bbe1eabc.json  query-0d20084e17bccfd9da35bc72c0fbc25b4ffb55e3914fa281486816b33f580a93.json  query-0ededea193783728a38a1dc57271902695ec0fda163e8cbf56b1b51934475d39.json  query-0f10666a2d874010e58040aa87c5f75eab58046d4b31dda113bc32d69fcf2e6c.json  query-0fc168d6a660fc9461507d8fe79b46a9f82faa3846406855bfe6c119431be609.json  query-0fe1414a632eeb75054c86eaa443a8d2386fb5006532b488def64412fc1decb4.json  query-10664b61d3cdc78417669d5b22aff900a40702f50bfa32660eb634f6a3742c14.json  query-10a799d529c7a3995cef8f291d13e4a157eb4aa696cf483d5afbcf1a18699972.json  query-11e22bad71ecae2a7ec27fa065692afb26998d467d09b730db20ea19adc362c2.json  query-123c93c438751bd236bf8f53d8312a8e38d10bbfffc2baba19906684c490d5d5.json  query-1290a09986f745df704ecd57294323710b4b1073eae7d62566272d1a2d916298.json  query-13d6deb6b08b7af7b93121acad348ef69a9b157d69d2e722f75ee29b70589a59.json  query-14494d96266cea3bde45c4db064bbd93b398546bc266c9197ef3425e8a9044ca.json  query-15990e9896aeecc8632c9c0bc54f50810d2b781401b0eda394c2dd1debcc894e.json  (+405 more)
api/migrations/: 20230916075559_initial_schema.sql  20231127000000_add_campaign_preferences.sql  20231202000000_add_instagram_accounts.sql  20231207000000_add_image_to_instagram_campaign_rules.sql  20231219000000_add_facebook_login.sql  20240110143549_remove_nostr_fields.sql  20240126000000_initial_schema.sql  20240308000000_update_on_chain_txs.sql  20240308000001_add_approval_submitted_state.sql  20240402000000_asami_v2.sql  20240629140235_create_one_time_login_emails.sql  20241213120000_add_indexed_columns_for_explorer.sql  20241227110000_store_campaign_tweet_metrics.sql  20250104090000_add_pay_per_point_to_campaigns.sql  20250118010000_remove_unused_tables.sql  20250415000000_add_columns_for_new_algorithm.sql  20250609120000_track_refresh_token_when_invalidated.sql  20250610120000_backer_rewards_distribution.sql  20250613000000_add_more_tracking_to_fee_pool_claims.sql  20250617000000_add_exchange_rates_table.sql  20250619000000_add_indexes_for_stats.sql  20250622000000_add_more_states_to_handles.sql  20250624000000_add_new_campaign_notifications.sql  20250630000000_add_wallet_migration_request.sql
api/src/: api.rs  app.rs  contract.rs  debug_rust_contract_bindings.rs  error.rs  lang.rs  lib.rs  main.rs  make_admin_address.rs  migrator.rs  models.rs  on_chain.rs  trace_transaction.rs  worker.rs
api/src/api/: account.rs  account_merge.rs  audit_log_entry.rs  campaign.rs  campaign_preference.rs  campaign_request.rs  collab.rs  handle.rs  (+14 more)
integration_tests/: Cargo.toml  Rocket.toml  package-lock.json  package.json  public_api_queries.graphql  public_api_schema.graphql  run  run-all  run-ci  tweak-browser
integration_tests/artifacts/: #advertiser-claim-account-pending_2024-05-27 19:58:06.311255933 UTC
integration_tests/chromedrivers/: metamask.pem
integration_tests/src/: lib.rs  run_dev.rs  update_contract_and_hardhat.rs  update_contract_and_truffle.rs  update_graphql_definitions.rs
integration_tests/tests/: api_auth.rs  asami_token_issuance_and_usage.rs  campaign_finishing_and_reimbursement.rs  contract.rs  facebook_login.rs  fees_distribution.rs  generic_request_workflows.rs  handles.rs  image_comparison.rs  instagram_usage.rs  making_collabs.rs  member_campaign_preferences.rs  member_scoring_and_profile_updating.rs  model_and_api.rs  on_chain_jobs.rs  twitter_api_usage.rs  twitter_usage.rs  webapp.rs
nostr_indexer/: .env  Cargo.toml
nostr_indexer/migrations/: 20230526213855_create_events_table.sql  20230714010000_add_kind_to_events.sql  20230714094813_ban_relays_forever.sql
nostr_indexer/src/: main.rs  models.rs
(+2881 files in other folders)
