[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["chrono", "rust_decimal"] }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
async-trait = "^0.1.52"
rocket-recaptcha-v3 = "*"
serde = "1.0"
serde_with = { version = "3.2.0", features = ["hex"]}
serde_derive = "1.0"
serde_json = "1.0.85"
itertools = "0.10.1"
thiserror = "1.0"
sqlx = "0.6.0"
sqlx-models-orm = "0.1.6"
rust_decimal = "*"
rust_decimal_macros = "*"
tokio = { version = "1.2.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
jwt-simple = "0.11.6"
base64-serde = "0.7.0"
base64 = "0.21.2"
validators = "*"
hex = "0.4.3"
chbs = "0.1.0"
hmac = "0.11.0"
sha2 = "0.9.8"
twitter-v2 = { version = "0.1.8", features = ["oauth2", "rustls-tls"] }
ureq = { version = "2.8.0", features = ["json"] }
ethers = { version = "2.0.10", features = ["eip712"] }
regex = "1"

[dev-dependencies]
galvanic-test = "0.2"
galvanic-assert = "0.8.7"
mockito = "0.28"
time-test = "0.2.2"
anyhow = "*"
