[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["chrono", "rust_decimal"] }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
async-trait = "^0.1.52"
rocket-recaptcha-v3 = "*"
serde = "1.0"
serde_with = { version = "3.2.0", features = ["hex"]}
serde_derive = "1.0"
serde_json = "1.0.85"
itertools = "0.10.1"
thiserror = "1.0"
sqlx = { workspace = true}
sqlx-cli = { workspace = true }
stripe-rust = { workspace = true }
sqlx-models-orm = "0.8.5"
rust_decimal = "*"
rust_decimal_macros = "*"
tokio = { version = "1.2.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.37"
jwt-simple = "0.11.6"
base64-serde = "0.7.0"
base64 = "0.21.2"
validators = "*"
hex = "0.4.3"
chbs = "0.1.0"
hmac = "0.11.0"
sha2 = "0.9.8"
twitter-v2 = { git = "https://github.com/constata-eu/twitter-v2-rs", features = ["oauth2", "rustls-tls"] }
ureq = { version = "2.8.0", features = ["json"] }
ethers = { version = "2.0.10", features = ["eip712", "legacy"] }
regex = "1"
duplicate = "*"
image = { version = "0.24.7" }
image_hasher = "1.1.0"
anyhow = "*"
url = "*"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = { version = "0.26.2" }
lingua = { version = "1.7.1", default-features = false, features = ["spanish"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
rand = "*"

[dev-dependencies]
galvanic-test = "0.2"
galvanic-assert = "0.8.7"
mockito = "0.28"
time-test = "0.2.2"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "make_admin_address"
path = "src/make_admin_address.rs"

[[bin]]
name = "debug_rust_contract_bindings"
path = "src/debug_rust_contract_bindings.rs"

[[bin]]
name = "migrator"
path = "src/migrator.rs"

[[bin]]
name = "trace_transaction"
path = "src/trace_transaction.rs"
