[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
tokio = { workspace = true }
assert_cmd = "*"
thirtyfour = "0.31"
regex = "*"
ureq = { version = "*", features = ["json", "charset"] }
serde = "1.0"
serde_with = { version = "3.2.0", features = ["hex"]}
serde_derive = "1.0"
serde_json = "1.0.85"
chrono = { version = "0.4", features = ["serde"] }
time-test = { version = "0.2.2" }
galvanic-test = "0.2"
galvanic-assert = "0.8.7"
anyhow = { workspace = true }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
jwt-simple = "0.11.6"
graphql_client = "0.12.0"
graphql_queries_from_schema = { git = "https://github.com/constata-eu/graphql_queries_from_schema", branch = "main" }
base64 = "0.21.2"
ethers = { version = "2.0.10", features = ["eip712"] }
rust_decimal = "*"
image = { version = "0.24.7" }
image_hasher = "1.1.0"
rand = "0.8.5"
test-log = { version = "0.2", features = ["trace"] }
nix = { workspace = true }
sqlx-cli = { workspace = true }
clap_builder = { version = "4.5.7" }
clap = { version = "4.5", features = [ "derive", "env" ] }
serial_test = { version = "3.2.0", features = ["file_locks"] }

[lib]
name = "integration_tests"

[[bin]]
name = "update-graphql-definitions"
path = "src/update_graphql_definitions.rs"

[[bin]]
name = "run-dev"
path = "src/run_dev.rs"
