[package]
name = "nostr_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.22.0"

tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }

sqlx = "0.6.0"
sqlx-models-orm = "0.1.6"
csv = "1.1.5"
env_logger = "0.10.0"
num_cpus = "1.15.0"
anyhow = "1.0.71"
thiserror = "*"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
tokio = "1.28.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
url = { version = "2", features = ["serde"] }
futures = "*"
futures-util = "*"
itertools = "*"

